fixed alignment

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ html, body {
 .genre {
   position: static;
 
-  margin-bottom: 25px;
+  margin-bottom: 22px;
   margin-left: 3vw;
   font-size: 5vw;
   /* display: block; */
@@ -62,7 +62,7 @@ html, body {
 }
 
 H3 {
-  margin-top: 0px;
+  margin-top: 10px;
 }
 
 
